--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
+
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="es" class="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WiseBetCore - Executive Dashboard</title>
+    <title>WiseBetCore - ERP Operativo</title>
     
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&family=Noto+Sans:wght@400;500;600;700;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
 
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
-    <!-- Tailwind CSS -->
+    <!-- Tailwind CSS Custom Config -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <script>
         tailwind.config = {
@@ -22,40 +23,38 @@
             theme: {
                 extend: {
                     colors: {
-                        "primary": "#135bec",
-                        "primary-hover": "#0f4bc2",
-                        "background-light": "#f6f6f8",
-                        "background-dark": "#111318",
-                        "surface-dark": "#1c1f27", 
-                        "panel-dark": "#111620",
-                        "card-dark": "#1a212e",
-                        "border-dark": "#282e39",
-                        "text-secondary": "#9da6b9",
-                        "success": "#10b981",
-                        "danger": "#ef4444",
-                        "warning": "#f59e0b",
-                        "profit": "#0bda5e",
-                        "loss": "#fa6238",
+                        "primary": "#00ff88",
+                        "primary-hover": "#00e67a",
+                        "background-light": "#f8fafc",
+                        "background-dark": "#050505",
+                        "surface-dark": "#0d0d0d", 
+                        "panel-dark": "#121212",
+                        "card-dark": "#181818",
+                        "border-dark": "#1f1f1f",
+                        "text-secondary": "#666666",
+                        "success": "#00ff88",
+                        "danger": "#ff4d4d",
+                        "warning": "#ffcc00",
+                        "info": "#00d4ff"
                     },
                     fontFamily: {
-                        "display": ["Inter", "sans-serif"],
-                        "body": ["Inter", "sans-serif"],
                         "sans": ["Inter", "sans-serif"],
-                    },
-                    backgroundImage: {
-                        'dark-texture': 'url("data:image/svg+xml,%3Csvg width=\'6\' height=\'6\' viewBox=\'0 0 6 6\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'%23ffffff\' fill-opacity=\'0.05\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M5 0h1V6H0V5h5V0zM0 0h1v5H0V0z\'/%3E%3C/g%3E%3C/svg%3E")'
                     },
                 },
             },
         }
     </script>
     <style>
-        body { font-family: 'Inter', sans-serif; }
-        ::-webkit-scrollbar { width: 8px; height: 8px; }
-        ::-webkit-scrollbar-track { background: #111318; }
-        ::-webkit-scrollbar-thumb { background: #282e39; border-radius: 4px; }
-        ::-webkit-scrollbar-thumb:hover { background: #3b4354; }
-        .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24; }
+        body { font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; }
+        ::-webkit-scrollbar { width: 4px; height: 4px; }
+        ::-webkit-scrollbar-track { background: transparent; }
+        ::-webkit-scrollbar-thumb { background: #1f1f1f; border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: #00ff88; }
+        .custom-scrollbar::-webkit-scrollbar { width: 3px; }
+        .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 20; }
+        
+        /* Smooth transitions for theme colors */
+        .transition-theme { transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease; }
     </style>
 <script type="importmap">
 {
@@ -72,7 +71,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-<body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white h-screen overflow-hidden flex flex-col">
+<body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-[#e1e1e1] h-screen overflow-hidden flex flex-col transition-theme">
     <div id="root" class="h-full flex flex-col"></div>
 <script type="module" src="/index.tsx"></script>
 </body>
