--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
 </head>
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-[#e1e1e1] h-screen overflow-hidden flex flex-col transition-theme">
     <div id="root" class="h-full flex flex-col"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
